--- a/HW1_WW.ipynb
+++ b/HW1_WW.ipynb
@@ -6,7 +6,7 @@
       "name": "HW1_WW.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO4ljFR3rddqvHltdoM8POo",
+      "authorship_tag": "ABX9TyPOmhK/yD6hP+hM9a3GJNXC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,11 +30,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "8ayvqs3WbYod"
+        "id": "8ayvqs3WbYod",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 374
+        },
+        "outputId": "6ec4a974-3878-4b8b-9b81-21f4a65c1e4a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-3-eb525214579a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mndimage\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mlr_utils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mload_dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m#  train_set_x_orig = h5py.File(\"train_catvnoncat.h5\",'r')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'lr_utils'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ],
       "source": [
         "#      EE 6183-Y01 Deep Learning  Homework #1\n",
         "#       Import packages\n",
@@ -44,12 +72,12 @@
         "from PIL import Image\n",
         "from scipy import ndimage\n",
         "import matplotlib.pyplot as plt\n",
-        "# from lr_utils import load_dataset\n",
+        "from lr_utils import load_dataset\n",
         "\n",
-        "train_set_x_orig = h5py.File(\"train_catvnoncat.h5\",'r')\n",
+        "#  train_set_x_orig = h5py.File(\"train_catvnoncat.h5\",'r')\n",
         "\n",
         "\n",
-        "#test_set_x_orig = h5py.File(\"test_catvnoncat.h5\",'r')\n",
+        "#  test_set_x_orig = h5py.File(\"test_catvnoncat.h5\",'r')\n",
         "\n",
         "\n",
         "\n",
@@ -60,9 +88,7 @@
         "\n",
         "\n",
         "\n",
-        "# Load the data sets  -- will need to account for Group 1 and Group 2 processing\n",
-        "#train_set_x_orig, train_set_y, test_set_x_orig, test_set_y, classes = \n",
-        "#load_dataset()\n",
+        "# Load the data sets  -- will need to account for Group 1 and Group 2 processingtrain_set_x_orig,train_set_y,test_set_x_orig,test_set_y,classes=load_data()\n",
         "# index=25\n",
         "\n",
         "#  plt.imshow(train_set_x_orig[index])\n",
@@ -84,7 +110,7 @@
       "metadata": {
         "id": "mCHVivVBmHlM"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -95,7 +121,7 @@
       "metadata": {
         "id": "C5UJv5bBlvGJ"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
